--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<h1> Rolling a die</h1>
 			<button onclick="roll()">Roll</button>
 			</br>
-			<img id="im1" src="d1.PNG"/>
+			<img id="im1" src="d1.png"/>
 			<script>
 				function roll()
 				{
